fix && style: refactored and corrected wrong java level methods