@@ -2,6 +2,7 @@ package com.binance4j.wallet.client;
 
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Collectors;
 
 import com.binance4j.core.request.RequestExecutor;
 import com.binance4j.core.request.RestClient;
@@ -80,7 +81,8 @@ public class WalletClient extends RestClient<WalletMapping> {
      * @return The executor permitting sync/async API call
      */
     public RequestExecutor<SystemStatus> getSystemStatus() {
-        return new RequestExecutor<>(getServices().stream().map(WalletMapping::getSystemStatus).toList());
+        return new RequestExecutor<>(
+                getServices().stream().map(WalletMapping::getSystemStatus).collect(Collectors.toList()));
     }
 
     /**
@@ -92,7 +94,8 @@ public class WalletClient extends RestClient<WalletMapping> {
      * @return The executor permitting sync/async API call
      */
     public RequestExecutor<List<CoinInformation>> getAllCoinsInfo(CoinInformationRequest req) {
-        return new RequestExecutor<>(getServices().stream().map(a -> a.getAllCoinsInfo(pojoToMap(req))).toList(), req);
+        return new RequestExecutor<>(
+                getServices().stream().map(a -> a.getAllCoinsInfo(pojoToMap(req))).collect(Collectors.toList()), req);
     }
 
     /**
@@ -117,7 +120,8 @@ public class WalletClient extends RestClient<WalletMapping> {
      */
     public RequestExecutor<SpotAccountSnapshotResponse> getSpotAccountSnapshot(AccountSnapshotRequest req) {
         return new RequestExecutor<>(getServices().stream()
-                .map(a -> a.getSpotAccountSnapshot(AccountSnapshotType.SPOT, pojoToMap(req))).toList(), req);
+                .map(a -> a.getSpotAccountSnapshot(AccountSnapshotType.SPOT, pojoToMap(req)))
+                .collect(Collectors.toList()), req);
     }
 
     /**
@@ -142,7 +146,8 @@ public class WalletClient extends RestClient<WalletMapping> {
      */
     public RequestExecutor<MarginAccountSnapshotResponse> getMarginAccountSnapshot(AccountSnapshotRequest req) {
         return new RequestExecutor<>(getServices().stream()
-                .map(a -> a.getMarginAccountSnapshot(AccountSnapshotType.MARGIN, pojoToMap(req))).toList(), req);
+                .map(a -> a.getMarginAccountSnapshot(AccountSnapshotType.MARGIN, pojoToMap(req)))
+                .collect(Collectors.toList()), req);
     }
 
     /**
@@ -167,7 +172,8 @@ public class WalletClient extends RestClient<WalletMapping> {
      */
     public RequestExecutor<FuturesAccountSnapshotResponse> getFuturesAccountSnapshot(AccountSnapshotRequest req) {
         return new RequestExecutor<>(getServices().stream()
-                .map(a -> a.getFuturesAccountSnapshot(AccountSnapshotType.FUTURES, pojoToMap(req))).toList(), req);
+                .map(a -> a.getFuturesAccountSnapshot(AccountSnapshotType.FUTURES, pojoToMap(req)))
+                .collect(Collectors.toList()), req);
     }
 
     /**
@@ -196,7 +202,7 @@ public class WalletClient extends RestClient<WalletMapping> {
      */
     public RequestExecutor<Void> disableFastWithdrawSwitch(FastWithdrawSwitchRequest req) {
         return new RequestExecutor<>(getServices().stream()
-                .map(a -> a.disableFastWithdrawSwitch(pojoToMap(req))).toList(), req);
+                .map(a -> a.disableFastWithdrawSwitch(pojoToMap(req))).collect(Collectors.toList()), req);
     }
 
     /**
@@ -229,7 +235,7 @@ public class WalletClient extends RestClient<WalletMapping> {
      */
     public RequestExecutor<Void> enableFastWithdrawSwitch(FastWithdrawSwitchRequest req) {
         return new RequestExecutor<>(getServices().stream()
-                .map(a -> a.enableFastWithdrawSwitch(pojoToMap(req))).toList(), req);
+                .map(a -> a.enableFastWithdrawSwitch(pojoToMap(req))).collect(Collectors.toList()), req);
     }
 
     /**
@@ -256,7 +262,7 @@ public class WalletClient extends RestClient<WalletMapping> {
      */
     public RequestExecutor<WithdrawResult> withdraw(WithdrawRequest req) {
         return new RequestExecutor<>(getServices().stream()
-                .map(a -> a.withdraw(pojoToMap(req))).toList(), req);
+                .map(a -> a.withdraw(pojoToMap(req))).collect(Collectors.toList()), req);
     }
 
     /**
@@ -284,7 +290,7 @@ public class WalletClient extends RestClient<WalletMapping> {
      */
     public RequestExecutor<List<DepositHistory>> getDepositHistory(DepositHistoryRequest req) {
         return new RequestExecutor<>(getServices().stream()
-                .map(a -> a.getDepositHistory(pojoToMap(req))).toList(), req);
+                .map(a -> a.getDepositHistory(pojoToMap(req))).collect(Collectors.toList()), req);
     }
 
     /**
@@ -324,7 +330,7 @@ public class WalletClient extends RestClient<WalletMapping> {
      */
     public RequestExecutor<List<WithdrawHistory>> getWithdrawHistory(WithdrawHistoryRequest req) {
         return new RequestExecutor<>(getServices().stream()
-                .map(a -> a.getWithdrawHistory(pojoToMap(req))).toList(), req);
+                .map(a -> a.getWithdrawHistory(pojoToMap(req))).collect(Collectors.toList()), req);
     }
 
     /**
@@ -360,7 +366,7 @@ public class WalletClient extends RestClient<WalletMapping> {
      */
     public RequestExecutor<DepositAddress> getDepositAddress(DepositAddressRequest req) {
         return new RequestExecutor<>(getServices().stream()
-                .map(a -> a.getDepositAddress(pojoToMap(req))).toList(), req);
+                .map(a -> a.getDepositAddress(pojoToMap(req))).collect(Collectors.toList()), req);
     }
 
     /**
@@ -374,7 +380,7 @@ public class WalletClient extends RestClient<WalletMapping> {
      */
     public RequestExecutor<AccountStatus> getAccountstatus(AccountStatusRequest req) {
         return new RequestExecutor<>(getServices().stream()
-                .map(a -> a.getAccountstatus(pojoToMap(req))).toList(), req);
+                .map(a -> a.getAccountstatus(pojoToMap(req))).collect(Collectors.toList()), req);
     }
 
     /**
@@ -398,7 +404,7 @@ public class WalletClient extends RestClient<WalletMapping> {
      */
     public RequestExecutor<ApiTradingStatus> getApiTradingStatus(ApiTradingStatusRequest req) {
         return new RequestExecutor<>(getServices().stream()
-                .map(a -> a.getApiTradingStatus(pojoToMap(req))).toList(), req);
+                .map(a -> a.getApiTradingStatus(pojoToMap(req))).collect(Collectors.toList()), req);
     }
 
     /**
@@ -422,7 +428,7 @@ public class WalletClient extends RestClient<WalletMapping> {
      */
     public RequestExecutor<DustLog> getDustLog(DustLogRequest req) {
         return new RequestExecutor<>(getServices().stream()
-                .map(a -> a.getDustLog(pojoToMap(req))).toList(), req);
+                .map(a -> a.getDustLog(pojoToMap(req))).collect(Collectors.toList()), req);
     }
 
     /**
@@ -446,7 +452,7 @@ public class WalletClient extends RestClient<WalletMapping> {
      */
     public RequestExecutor<DustTransferResponse> dustTransfert(DustTransferRequest req) {
         return new RequestExecutor<>(getServices().stream()
-                .map(a -> a.dustTransfert(pojoToMap(req))).toList(), req);
+                .map(a -> a.dustTransfert(pojoToMap(req))).collect(Collectors.toList()), req);
     }
 
     /**
@@ -461,7 +467,7 @@ public class WalletClient extends RestClient<WalletMapping> {
      */
     public RequestExecutor<AssetDividendRecord> getAssetDividendRecord(AssetDividendRecordRequest req) {
         return new RequestExecutor<>(getServices().stream()
-                .map(a -> a.getAssetDividendRecord(pojoToMap(req))).toList(), req);
+                .map(a -> a.getAssetDividendRecord(pojoToMap(req))).collect(Collectors.toList()), req);
     }
 
     /**
@@ -487,7 +493,7 @@ public class WalletClient extends RestClient<WalletMapping> {
      */
     public RequestExecutor<Map<String, AssetDetail>> getAssetDetail(AssetDetailRequest req) {
         return new RequestExecutor<>(getServices().stream()
-                .map(a -> a.getAssetDetail(pojoToMap(req))).toList(), req);
+                .map(a -> a.getAssetDetail(pojoToMap(req))).collect(Collectors.toList()), req);
     }
 
     /**
@@ -511,7 +517,7 @@ public class WalletClient extends RestClient<WalletMapping> {
      */
     public RequestExecutor<List<TradeFee>> getTradeFee(TradeFeeRequest req) {
         return new RequestExecutor<>(getServices().stream()
-                .map(a -> a.getTradeFee(pojoToMap(req))).toList(), req);
+                .map(a -> a.getTradeFee(pojoToMap(req))).collect(Collectors.toList()), req);
     }
 
     /**
@@ -549,7 +555,7 @@ public class WalletClient extends RestClient<WalletMapping> {
      */
     public RequestExecutor<WalletTransferResponse> transfer(WalletTransferRequest req) {
         return new RequestExecutor<>(getServices().stream()
-                .map(a -> a.transfer(pojoToMap(req))).toList(), req);
+                .map(a -> a.transfer(pojoToMap(req))).collect(Collectors.toList()), req);
     }
 
     /**
@@ -581,7 +587,7 @@ public class WalletClient extends RestClient<WalletMapping> {
      */
     public RequestExecutor<WalletTransferHistory> getTransferHistory(WalletTransferHistoryRequest req) {
         return new RequestExecutor<>(getServices().stream()
-                .map(a -> a.getTransferHistory(pojoToMap(req))).toList(), req);
+                .map(a -> a.getTransferHistory(pojoToMap(req))).collect(Collectors.toList()), req);
     }
 
     /**
@@ -598,7 +604,7 @@ public class WalletClient extends RestClient<WalletMapping> {
      */
     public RequestExecutor<List<FundingAsset>> getFundingAsset(FundingAssetRequest req) {
         return new RequestExecutor<>(getServices().stream()
-                .map(a -> a.getFundingAsset(pojoToMap(req))).toList(), req);
+                .map(a -> a.getFundingAsset(pojoToMap(req))).collect(Collectors.toList()), req);
     }
 
     /**
@@ -622,7 +628,7 @@ public class WalletClient extends RestClient<WalletMapping> {
      */
     public RequestExecutor<ApiPermissions> getApiPermissions(ApiPermissionsRequest req) {
         return new RequestExecutor<>(getServices().stream()
-                .map(a -> a.getApiPermissions(pojoToMap(req))).toList());
+                .map(a -> a.getApiPermissions(pojoToMap(req))).collect(Collectors.toList()));
     }
 
     /**
